--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3953,7 +3953,7 @@ table .product-thumbnail img {
     z-index: 100;
     position: relative;
     color: #fff;
-    background: url(../imgs/page/about-9.png) no-repeat center center;
+    background: url(../imgs/page-1/about-9.png) no-repeat center center;
     border-radius: 15px;
     padding: 100px 0;
     overflow: hidden;
